--- a/gatsby-github-blog/index.html
+++ b/gatsby-github-blog/index.html
@@ -76,13 +76,14 @@
 <br/>
 <br/>
 <h2 id="️-그래서-어떻게-정리할-생각인데" style="position:relative;"><a href="#%EF%B8%8F-%EA%B7%B8%EB%9E%98%EC%84%9C-%EC%96%B4%EB%96%BB%EA%B2%8C-%EC%A0%95%EB%A6%AC%ED%95%A0-%EC%83%9D%EA%B0%81%EC%9D%B8%EB%8D%B0" aria-label="️ 그래서 어떻게 정리할 생각인데 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>💁‍♀️ 그래서 어떻게 정리할 생각인데?</h2>
-<p>개발자는 평생 공부하는 직업이라고 한다더니 그게 아니었다. 공부만 한다고 되는 게 아니라 개발자는 정리를 잘해야 한다는 걸 몸소 체감했다.그래서 나 나름대로 큰 갈래를 잡아서 정리하는 습관을 들이기로 했다. 우선 세가지 갈래로 나눠서 생각했다. <strong>일상, 공부 &#x26; 강의, 알고리즘 or 코테</strong>
+<p>개발자는 평생 공부하는 직업이라고 한다더니 그게 아니었다. 공부만 한다고 되는 게 아니라 개발자는 정리를 잘해야 한다는 걸 몸소 체감했다.
+그래서 나 나름대로 큰 갈래를 잡아서 정리하는 습관을 들이기로 했다. 우선 세가지 갈래로 나눠서 생각했다. <strong>일상, 공부 &#x26; 강의, 알고리즘 or 코테</strong>
 이것만 꾸준히 정리한다고 해도 올해는 성공일 것 같다. 나는 P이기 때문에 ..</p>
 <br/>
 <br/>
 <h2 id="-올해의-목표" style="position:relative;"><a href="#-%EC%98%AC%ED%95%B4%EC%9D%98-%EB%AA%A9%ED%91%9C" aria-label=" 올해의 목표 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>✨ 올해의 목표</h2>
-<p>벌써 5월을 눈앞에 앞두고 있는 시점에서 올해의 목표를 세우는 건 좀 늦은 감이 있긴 하지만, 올해의 목표는 <strong>JS 격파</strong> 이다.
-자바스크립트와 관련된 프레임워크, 라이브러리에 익숙해지고 친해지고 싶다.물론 node도 해보고 싶다.
+<p>벌써 5월을 눈앞에 앞두고 있는 시점에서 올해의 목표를 세우는 건 좀 늦은 감이 있긴 하지만, 올해의 목표는
+<strong>JS 격파</strong> 이다. 자바스크립트와 관련된 프레임워크, 라이브러리에 익숙해지고 친해지고 싶다.물론 node도 해보고 싶다.
 조금씩 강의를 듣고있긴 했는데 퇴근 후 공부가 이렇게 힘든건지 처음 알았다. 듣고는 있지만 100퍼센트 집중이 안되는 느낌이다.😭
 하루가 36시간이면 좋겠단 생각을 종종 한다 ..
 그리고 시간이 남는다면 파이썬도 틈틈이 해볼까한다. 지레 겁먹지 말고 해보자! 파이썬 조금 하고 겁먹어서 뒤꽁무니 뺀 상황이라..ㅠ</p>
